# seams-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
seams-rs/: Cargo.toml  README.md
seams-rs-core/: Cargo.toml  README.md
seams-rs-core/src/: contract_tests.rs  fs.rs  lib.rs
seams-rs-core/tests/: contracts_against_fakes.rs
seams-rs-fake/: Cargo.toml  README.md
seams-rs-fake/src/: lib.rs  memory_fs.rs
seams-rs-fake/tests/: memory_fs_contracts.rs
seams-rs-std/: Cargo.toml  README.md
seams-rs-std/src/: fs.rs  lib.rs
seams-rs-std/tests/: fs_contracts.rs
seams-rs/src/: lib.rs
seams-rs/tests/: facade.rs
