[workspace]
resolver = "2"
members = ["seams-rs-core", "seams-rs-fake", "seams-rs-std", "seams-rs"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GoCleverOrg/seams-rs"
authors = ["GoClever <opensource@goclever.com>"]
rust-version = "1.84"

[workspace.dependencies]
thiserror = "1.0"
tokio = { version = "1", default-features = false }
tempfile = "3"

# Scoped profile for cargo-mutants runs (mirrors vmb-rs / opencv-rs).
[profile.mutants-bench]
inherits = "dev"
codegen-units = 1
debug = 0
