[package]
authors.workspace = true
categories = ["development-tools", "asynchronous", "concurrency"]
description = "Standard-library-backed production impls of seams-rs-core ports: SystemClock, StdSleeper, StdSpawner, StdFileSystem, TokioFileSystem"
edition.workspace = true
keywords = ["filesystem", "tokio", "std", "hexagonal", "seams"]
license.workspace = true
name = "seams-rs-std"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
seams-rs-core = { version = "0.2.0", path = "../seams-rs-core" }
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt", "macros"] }
