[package]
authors.workspace = true
categories = ["development-tools::testing", "asynchronous", "concurrency"]
description = "Hexagonal strict-DI seams for time, sleeping, thread spawning, and filesystem I/O"
edition.workspace = true
keywords = ["hexagonal", "ports-and-adapters", "filesystem", "testing", "seams"]
license.workspace = true
name = "seams-rs"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
# Enables the real std-backed implementations via `seams-rs-std`. When
# off, only the `seams-rs-core` port layer is re-exported — useful in
# no_std adjacent consumers that only need trait definitions + the fakes.
std = ["dep:seams-rs-std"]

[dependencies]
seams-rs-core = { version = "0.2.0", path = "../seams-rs-core" }
seams-rs-std = { version = "0.2.0", path = "../seams-rs-std", optional = true }

[dev-dependencies]
# Path-only (no `version`): the facade tests use the fake, and seams-rs is
# published last in the chain — keeping `version` would force cargo publish
# to re-resolve it from crates.io as a dev-dep during verification.
seams-rs-fake = { path = "../seams-rs-fake" }
